version/0.19/_sources/api/solver/_autosummary/settings/transfer_coefficient.rst.txt
:orphan:

.. _transfer_coefficient:

transfer_coefficient
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.transfer_coefficient.transfer_coefficient
    :show-inheritance:

.. rubric:: Attributes

==================================================   ============================================================

Attribute                                                                                                 Summary

==================================================   ============================================================
:ref:`option <option>`                                                                            'option' child.

:ref:`function_of <function_of>`                              Specify what variable this object is a function of.

:ref:`value <value_4>`                                                   Specify value as constant or expression.

:ref:`piecewise_polynomial <piecewise_polynomial>`                         Specify piecewise-polynomial settings.

:ref:`piecewise_linear <piecewise_linear_1>`             Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_1>`                                                 Specify polynomial coefficients.

==================================================   ============================================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`recirculation_inlet_child <recirculation_inlet_child>`       'child_object_type' of recirculation_inlet.

:ref:`phase_child <phase_child_22>`                                              'child_object_type' of phase.

============================================================   ===============================================

