version/0.28/_sources/api/solver/_autosummary/settings/transfer_coefficient.rst.txt
:orphan:

.. _transfer_coefficient:

transfer_coefficient
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.transfer_coefficient
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_32>`                                                                 Select polynomial method.

:ref:`function_of <function_of>`                                Specify what variable this object is a function of.

:ref:`value <value_17>`                                                    Specify value as constant or expression.

:ref:`udf <udf_1>`                                                                           User defined function.

:ref:`piecewise_polynomial <piecewise_polynomial_1>`                                 Piecewise polynomial settings.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

====================================================   ============================================================

.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

====================================================   =====================================================================

